<resources>
    <string name="app_name">Trans Weather</string>
    <string name="enter_city_name_or_zip_code">Enter City name or zip code</string>
    <string name="city_name">City</string>
    <string name="zip_code">Zip</string>
    <string name="latitude_longitude">Latitude/Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="or">OR</string>
    <string name="locate_me">Locate Me</string>
    <string name="can_not_find_location">Can\'t find locations</string>
    <string name="location_permission_error">Please Grant Location permission for the App</string>
    <string name="failed_to_get_location">Failed to get location try again later</string>
    <string name="explore_forecast">Forecast</string>
    <string name="switch_to_fahrenheit">switch to °F</string>
    <string name="switch_to_celsius">switch to °C</string>
    <string name="dashboard">Dashboard</string>
    <string name="something_went_wriong">Something went wrong please try again later</string>
    <string name="search">Search</string>
    <string name="start_by_searching_for_a_location_press_search_up_top_to_start">Start By Searching for a Location press Search up top to start</string>
    <string name="five_days">5 days</string>
    <string name="forty_eight_hours">48 Hours</string>
    <string name="twenty_four_hours">24 Hours</string>
    <string name="forecast">Forecast</string>
    <string name="current_weather">Current Weather</string>
    <string name="fresh_start_message">Hey, it seems you have not seached for any location yet, to start press the forecast or current weather buttons</string>
</resources>