<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".features.search.presentation.SearchFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchTil"
            style="?attr/textInputOutlinedDenseStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city_name_or_zip_code"
            android:padding="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/_16ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/latTil"
            style="?attr/textInputOutlinedDenseStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/latitude"
            android:paddingVertical="@dimen/_16sdp"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_8sdp"
            app:layout_constraintEnd_toStartOf="@id/longTil"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/latEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/_16ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/longTil"
            style="?attr/textInputOutlinedDenseStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/longitude"
            android:paddingVertical="@dimen/_16sdp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/latTil"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lonEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/_16ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/latLongGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="longTil,latTil" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/searchBarsBarrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="latTil,longTil,searchTil" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/cityNameRb"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@id/searchBarsBarrier">

            <RadioButton
                android:id="@+id/cityNameRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/city_name"
                android:textSize="@dimen/_12ssp"
                tools:checked="true" />

            <RadioButton
                android:id="@+id/latLongRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/latitude_longitude"
                android:textSize="@dimen/_12ssp" />

            <RadioButton
                android:id="@+id/zipCodeRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zip_code"
                android:textSize="@dimen/_12ssp" />


        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:background="?android:attr/textColorHint"
            app:layout_constraintBottom_toBottomOf="@id/orTv"
            app:layout_constraintTop_toTopOf="@id/orTv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/orTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="?attr/colorSurface"
            android:padding="@dimen/_8sdp"
            android:text="@string/or"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/locateMeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:padding="@dimen/_4sdp"
            android:text="@string/locate_me"
            app:icon="@drawable/location"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/orTv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/citiesRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locateMeBtn"
            tools:listitem="@layout/search_item" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/citiesRv"
            app:layout_constraintEnd_toEndOf="@id/citiesRv"
            app:layout_constraintStart_toStartOf="@id/citiesRv"
            app:layout_constraintTop_toTopOf="@id/citiesRv"
            app:layout_constraintVertical_bias=".25" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>