<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <Button
            android:id="@+id/dashboardBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/dashboard"
            app:icon="@drawable/back"
            app:iconGravity="textStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/searchBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/search"
            app:icon="@drawable/search"
            app:iconGravity="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/locationTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:letterSpacing=".3"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/dashboardBtn"
            app:textAllCaps="true"
            tools:text="Cairo" />


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".4"
            tools:visibility="visible" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconIv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/tempTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationTv" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tempTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:textSize="@dimen/_45ssp"
            app:layout_constraintBottom_toTopOf="@+id/switchBtn"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="20°" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mainTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/descriptionTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tempTv"
            app:layout_constraintTop_toTopOf="@id/tempTv"
            tools:text="Cloudy" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descriptionTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@id/tempTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tempTv"
            app:layout_constraintTop_toBottomOf="@id/mainTv"
            tools:text="Slightly humid with a gentle breeze in cairo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forecastBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/explore_forecast"
            app:icon="@drawable/timeline"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@+id/searchHistoryRv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/switchBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/switchBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/switch_to_celsius"
            app:layout_constraintBottom_toTopOf="@+id/searchHistoryRv"
            app:layout_constraintEnd_toStartOf="@id/forecastBtn"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchHistoryRv"
            android:layout_width="0dp"
            android:layout_height="@dimen/_120sdp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_16sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/item_recent_search" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/weatherInfoGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="locationTv,iconIv,tempTv,mainTv,descriptionTv,forecastBtn,switchBtn,searchHistoryRv" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/startBySearchGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="searchAnimation,startBySearchingTv" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/searchAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/startBySearchingTv"
            app:layout_constraintTop_toBottomOf="@id/dashboardBtn"
            app:layout_constraintVertical_bias=".4"
            app:layout_constraintVertical_chainStyle="packed"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/weather_search"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/startBySearchingTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/start_by_searching_for_a_location_press_search_up_top_to_start"
            android:textAlignment="center"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchAnimation" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>